Remove alignment styles that are no longer needed.

--- a/style.css
+++ b/style.css
@@ -379,18 +379,6 @@ img {
   max-width: 100%;
 }
 
-.aligncenter {
-  text-align: center;
-}
-
-.alignleft {
-  float: left;
-}
-
-.alignright {
-  float: right;
-}
-
 /* Screen Reader Text */
 .screen-reader-text {
   border: 0;
